--- a/cducsu.html
+++ b/cducsu.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="de">
   <head>
@@ -170,57 +171,87 @@
             gesellschaftliche Klima in Deutschland haben.
           </p>
 
+          <div class="video-container">
+            <iframe
+              width="560"
+              height="315"
+              src="https://www.youtube.com/embed/kDQki0MMFh4?si=OCHL72I_swL-J_Ao"
+              title="Flüchtlingspolitik: "Wir schaffen das"-Statement von Angela Merkel am 31.08.2015"
+              frameborder="0"
+              allowfullscreen
+            ></iframe>
+          </div>
+
           <p class="party-highlight-date">
-            <strong>Zeitraum:</strong> September 2015 - heute (mit Fokus auf die
-            Folgen)
+            <strong>Zeitraum:</strong> September 2015 - heute
           </p>
           <p class="party-highlight-source">
             <strong>Quelle:</strong>
             <a
-              href="https://de.wikipedia.org/wiki/Terroranschl%C3%A4ge_in_Deutschland"
+              href=""https://www.berliner-zeitung.de/politik-gesellschaft/vor-neun-jahren-versprachen-politiker-dass-fluechtlinge-gold-wert-sind-was-ist-daraus-geworden-li.2206370d"
               target="_blank"
-              >Wikipedia: Terroranschläge in Deutschland</a
+              >Berliner Zeitung: Vor neun Jahren versprachen Politiker, dass Flüchtlinge Gold wert sind – was sagen sie heute?</a
             >
-            (Als Ausgangspunkt – bitte durch spezifischere Quellen ergänzen!)
           </p>
 
           <div class="party-highlight-timeline">
-            <h4>Chronologie des Skandals:</h4>
-            <ul>
-              <li>
-                <strong>Sommer 2015:</strong> Starker Anstieg der
-                Flüchtlingszahlen, Zuspitzung der Lage an den Grenzen.
-              </li>
-              <li>
-                <strong>4. September 2015:</strong> Grenzöffnung durch
-                Deutschland und Österreich.
-              </li>
-              <li>
-                <strong>Dezember 2016:</strong> Breitscheidplatz-Anschlag in
-                Berlin.
-              </li>
-              <li>
-                <strong>2016 - heute:</strong> Weitere Terroranschläge und
-                Attentate in Deutschland. Anhaltende Debatte über
-                Migrationspolitik und innere Sicherheit.
-              </li>
-            </ul>
-          </div>
+            <h4>Chronologie bekannter Anschläge durch Zuwanderer seit 2015:</h4>
+           <ul>
+           <li>
+            <strong>Sommer 2015:</strong> Starker Anstieg der Flüchtlingszahlen, Zuspitzung der Lage an den Grenzen.
+           </li>
+           <li>
+            <strong>4. September 2015:</strong> Grenzöffnung durch
+            Deutschland und Österreich.
+            </li>
+                             <li>
+           <strong>26. Februar 2016:</strong> Messerangriff auf eine Polizistin in <strong>Eisenach</strong> durch einen 22-jährigen Asylbewerber aus Eritrea.
+            </li>
+            <li>
+            <strong>Dezember 2016:</strong> <strong>Breitscheidplatz-Anschlag in Berlin</strong>. Anis Amri, ein tunesischer Asylbewerber, fährt einen LKW in einen Weihnachtsmarkt, tötet 12 Menschen und verletzt viele weitere.
+            </li>
+            <li>
+           <strong>24. Juli 2016:</strong>  <strong>Anschlag in Ansbach</strong>. Ein syrischer Asylbewerber zündet eine Bombe vor einem Musikfestival und tötet sich selbst, 15 Menschen werden verletzt.
+            </li>
+           <li>
+           <strong>18. Juli 2016:</strong>  <strong>Axt-Angriff in der Würzburger Regionalbahn</strong>. Ein 17-jähriger Flüchtling aus Afghanistan greift Fahrgäste mit einer Axt und einem Messer an,  verletzt fünf Menschen schwer.
+            </li>
+           <li>
+            <strong>28. Juli 2017:</strong>  <strong>Messerangriff in Hamburg</strong>. Ein abgelehnter palästinensischer Asylbewerber tötet einen Menschen und verletzt mehrere in einem Supermarkt.
+            </li>
+            <li>
+           <strong>10. August 2018:</strong> <strong>Messerattacke in Aschaffenburg</strong> (2018): Ein 26-jähriger Afghane tötet einen Mann und verletzt mehrere Personen. 
+           </li>
+           <li>
+           <strong>21. Juni 2021:</strong>  <strong>Messerattacke in Würzburg</strong>. Ein 24-jähriger somalischer Asylbewerber tötet drei Frauen und verletzt mehrere Menschen.
+           </li>
+           <li>
+            <strong>31. Dezember 2022 Silvesternacht:</strong>  Krawalle und Angriffe auf Einsatzkräfte in mehreren deutschen Städten, insbesondere durch junge Männer mit Migrationshintergrund.
+            </li>
+            <li>
+           <strong>20. Juli 2023:</strong> <strong>Messerangriff in Magdeburg:</strong> Ein 27-jähriger Syrer tötet einen Mann und verletzt eine Frau in einem Park.
+           </li>
+           <li>
+           <strong>9. Mai 2024: Messerattacke in Solingen:</strong> Ein 31-jähriger Mann aus Guinea attackiert in einer Kita mehrere Kinder mit einem Messer, verletzt vier Kinder schwer.
+           </li>
+           <li>
+           <strong>24. Juni 2024: Messerattacke in Aschaffenburg:</strong> Ein 29-jähriger Afghane verletzt bei einer Messerattacke in der Innenstadt mehrere Menschen. 
+           </li>
+                         <li>
+           <strong>20. Dezember 2024:</strong> <strong>Anschlag in Magdeburg:</strong> Taleb A. aus Saudi-Arabien rast durch den Weihnachtsmarkt und hinterlässt sechs Todesopfer sowie mehr als 300 Verletzte.
+           </li>
+           </ul>
+                     </div>
 
           <p class="party-highlight-hashtags">
             <span class="hashtag">#grenzöffnung</span>
             <span class="hashtag">#migration</span>
             <span class="hashtag">#terror</span>
-            <span class="hashtag">#innereSicherheit</span>
+            <span class="hashtag">#sicherheit</span>
             <span class="hashtag">#cducsu</span>
             <span class="hashtag">#merkel</span>
           </p>
-
-          <div class="comment-section">
-            <h4>Diskussion</h4>
-            <textarea placeholder="Ihre Meinung zur Grenzöffnung..."></textarea>
-            <button class="submit-comment">Kommentar absenden</button>
-          </div>
+         
         </div>
       </div>
 
@@ -231,10 +262,10 @@
         </h3>
 
         <div class="highlight-skandal-scale">
-          <h4>Skandal-Skala: 8/10</h4>
+          <h4>Skandal-Skala: 6/10</h4>
           <div class="gradient-bar-container">
-            <div class="gradient-bar-filled" style="width: 80%"></div>
-            <div class="gradient-bar-unfilled" style="width: 20%"></div>
+            <div class="gradient-bar-filled" style="width: 60%"></div>
+            <div class="gradient-bar-unfilled" style="width: 40%"></div>
           </div>
         </div>
 
@@ -269,15 +300,13 @@
           </p>
 
           <p class="party-highlight-date">
-            <strong>Zeitraum:</strong> März 2020 - heute
+            <strong>Zeitraum:</strong> 2020 - 2023
           </p>
           <p class="party-highlight-source">
             <strong>Quelle:</strong>
-            <a
-              href="https://de.wikipedia.org/wiki/Maskenaff%C3%A4re"
+            <a href="https://de.wikipedia.org/wiki/Maskenaff%C3%A4re"
               target="_blank"
-              >Wikipedia: Maskenaffäre</a
-            >
+              >Wikipedia: Maskenaffäre</a>
           </p>
 
           <div class="party-highlight-timeline">
@@ -288,16 +317,25 @@
                 steigender Bedarf an Schutzmasken.
               </li>
               <li>
-                <strong>Februar/März 2021:</strong> Erste Berichte über
-                fragwürdige Maskengeschäfte von Unionsabgeordneten.
+                <strong>April 2020:</strong>  <strong>Niels Korte (CDU)</strong> vermittelt Maskendeal mit dem Bund für 90 Mio. Euro nach Kontakt zu <strong>Jens Spahn (CDU)</strong>.
               </li>
               <li>
-                <strong>März 2021:</strong> Rücktritt von Löbel und Nüßlein und
-                Einleitung von Ermittlungen.
+                <strong>Februar 2021:</strong>  <strong>Georg Nüßlein (CSU)</strong> gerät wegen Provisionszahlungen für Maskenvermittlung in den Fokus der Ermittlungen.
               </li>
               <li>
-                <strong>2021-heute:</strong> Andauernde juristische und
-                politische Aufarbeitung der Affäre.
+                <strong>März 2021:</strong>  Auch <strong>Nikolas Löbel (CDU)</strong> wird wegen persönlicher Vorteile aus Maskengeschäften öffentlich kritisiert.
+              </li>
+              <li>
+                <strong>März 2021:</strong>  <strong>Alfred Sauter (CSU)</strong> gesteht Spendenzahlungen aus Maskengeschäften, Ermittlungen gegen ihn beginnen.
+              </li>
+              <li>
+                <strong>März 2021:</strong>  Rücktritte von <strong>Nikolas Löbel (CDU)</strong> und <strong>Georg Nüßlein (CSU)</strong> aus der CDU/CSU-Bundestagsfraktion.
+              </li>
+              <li>
+                <strong>Januar 2023:</strong>  <strong>Andrea Tandler (CSU)</strong>, Hauptfigur im größten Maskendeal, wird wegen Steuerhinterziehung verhaftet.
+              </li>
+              <li>
+                <strong>Dezember 2023:</strong>  <strong>Andrea Tandler (CSU)</strong> wird zu über vier Jahren Haft wegen Steuerhinterziehung verurteilt.
               </li>
             </ul>
           </div>
@@ -308,24 +346,20 @@
             <span class="hashtag">#cducsu</span>
             <span class="hashtag">#corona</span>
           </p>
-
-          <div class="comment-section">
-            <h4>Diskussion</h4>
-            <textarea placeholder="Ihre Meinung zur Maskenaffäre..."></textarea>
-            <button class="submit-comment">Kommentar absenden</button>
-          </div>
         </div>
       </div>
+
+
       <div class="party-highlight">
         <h3 class="party-highlight-title">
           CDU-Spendenaffäre: Illegale Parteispenden und das System Kohl
         </h3>
 
         <div class="highlight-skandal-scale">
-          <h4>Skandal-Skala: 9/10</h4>
+          <h4>Skandal-Skala: 6/10</h4>
           <div class="gradient-bar-container">
-            <div class="gradient-bar-filled" style="width: 90%"></div>
-            <div class="gradient-bar-unfilled" style="width: 10%"></div>
+            <div class="gradient-bar-filled" style="width: 60%"></div>
+            <div class="gradient-bar-unfilled" style="width: 40%"></div>
           </div>
         </div>
 
@@ -361,11 +395,9 @@
           </p>
           <p class="party-highlight-source">
             <strong>Quelle:</strong>
-            <a
-              href="https://de.wikipedia.org/wiki/CDU-Spendenaff%C3%A4re"
+            <a href="https://de.wikipedia.org/wiki/CDU-Spendenaff%C3%A4re"
               target="_blank"
-              >Wikipedia: CDU-Spendenaffäre</a
-            >
+              >Wikipedia: CDU-Spendenaffäre</a>
           </p>
 
           <div class="party-highlight-timeline">
@@ -393,29 +425,22 @@
           <p class="party-highlight-hashtags">
             <span class="hashtag">#cdu</span>
             <span class="hashtag">#spendenaffäre</span>
-            <span class="hashtag">#helmutkohl</span>
-            <span class="hashtag">#parteispenden</span>
+            <span class="hashtag">#kohl</span>
           </p>
-
-          <div class="comment-section">
-            <h4>Diskussion</h4>
-            <textarea
-              placeholder="Ihre Meinung zur CDU-Spendenaffäre..."
-            ></textarea>
-            <button class="submit-comment">Kommentar absenden</button>
-          </div>
         </div>
       </div>
+
+      
       <div class="party-highlight">
         <h3 class="party-highlight-title">
           Pkw-Maut: Ein teures Missverständnis und politisches Debakel der CSU
         </h3>
 
         <div class="highlight-skandal-scale">
-          <h4>Skandal-Skala: 7/10</h4>
+          <h4>Skandal-Skala: 6/10</h4>
           <div class="gradient-bar-container">
-            <div class="gradient-bar-filled" style="width: 70%"></div>
-            <div class="gradient-bar-unfilled" style="width: 30%"></div>
+            <div class="gradient-bar-filled" style="width: 60%"></div>
+            <div class="gradient-bar-unfilled" style="width: 40%"></div>
           </div>
         </div>
 
@@ -425,36 +450,22 @@
 
         <div class="collapsible-content">
           <p class="party-highlight-description">
-            Die von der <b>CSU</b> unter <b>Alexander Dobrindt</b> maßgeblich
-            vorangetriebene <b>Pkw-Maut</b> für ausländische Autofahrer
-            entwickelte sich zu einem <b>politischen Desaster</b>. Das Projekt
-            scheiterte vor dem <b>Europäischen Gerichtshof</b> und verursachte
-            <b>Kosten in dreistelliger Millionenhöhe</b> für den Steuerzahler,
-            ohne jemals realisiert worden zu sein.
+            Das von der <b>CSU</b> unter <b>Alexander Dobrindt</b> initiierte und von <b>Andreas Scheuer</b> weitergeführte Projekt der <b>Pkw-Maut</b> für ausländische Autofahrer ist zu einem <b>kostspieligen Desaster</b> für die deutschen Steuerzahler geworden. Nachdem der <b>Europäische Gerichtshof</b> die Maut für rechtswidrig erklärte, muss der Bund nun <b>243 Millionen Euro Schadenersatz</b> an die Betreiberfirmen zahlen.
           </p>
           <p class="party-highlight-description">
-            Die Pkw-Maut war von Anfang an <b>umstritten</b> und wurde als
-            <b>bürokratisch, ineffizient und europarechtswidrig kritisiert</b>.
-            Zudem wurde der CSU vorgeworfen, mit dem Projekt
-            <b>nationalistische Töne</b> zu bedienen und die
-            <b>europäische Zusammenarbeit zu gefährden</b>.
+            Verkehrsminister <b>Andreas Scheuer</b> schloss 2018 Verträge zum Aufbau und Betrieb der Maut ab, noch bevor das Urteil des EuGH vorlag.  Diese Verträge wurden nach dem Urteil gekündigt, was zu den hohen Schadenersatzforderungen führte. Ursprünglich forderten die Unternehmen sogar 560 Millionen Euro.
           </p>
           <p class="party-highlight-description">
-            Das <b>Scheitern der Pkw-Maut</b> gilt als
-            <b>peinliche Niederlage für die CSU</b> und als Beispiel für
-            <b>politisches Missmanagement</b>. Es warf zudem Fragen nach der
-            <b>Kompetenz und dem Verantwortungsbewusstsein</b> der handelnden
-            CSU-Politiker auf.
+            Kritiker warfen der <b>CSU</b> vor, mit der Pkw-Maut <b>populistische Politik</b> zu betreiben und die <b>europäische Zusammenarbeit zu missachten</b>.  Das Scheitern des Projekts und die hohen Kosten werden als <b>peinliche Niederlage für die CSU</b> und als Beispiel für <b>politisches Fehlmanagement</b> gewertet.  Die Opposition kritisiert insbesondere das Verhalten von <b>Andreas Scheuer</b>, der die Verträge übereilt und ohne ausreichende Absicherung abgeschlossen haben soll.
           </p>
 
           <p class="party-highlight-date">
-            <strong>Zeitraum:</strong> 2013 - 2019
+            <strong>Zeitraum:</strong> 2013 - 2023
           </p>
           <p class="party-highlight-source">
             <strong>Quelle:</strong>
-            <a href="https://de.wikipedia.org/wiki/Pkw-Maut" target="_blank"
-              >Wikipedia: Pkw-Maut</a
-            >
+            <a href="https://www.handelsblatt.com/politik/deutschland/schadensersatz-das-pkw-maut-desaster-der-csu-kostet-rund-243-millionen-euro/29238526.html" target="_blank"
+              >Handelsblatt: Das Pkw-Maut-Desaster der CSU kostet rund 243 Millionen Euro</a>
           </p>
 
           <div class="party-highlight-timeline">
@@ -465,16 +476,16 @@
                 Pkw-Maut im Bundestagswahlkampf.
               </li>
               <li>
-                <strong>2015:</strong> Das Gesetz zur Pkw-Maut wird im Bundestag
-                beschlossen.
+                <strong>2018:</strong> Verkehrsminister Scheuer schließt Verträge mit Betreiberfirmen noch vor dem EuGH-Urteil.
               </li>
               <li>
-                <strong>2019:</strong> Der Europäische Gerichtshof erklärt die
-                Pkw-Maut für rechtswidrig.
+                <strong>Sommer 2019:</strong> Der Europäische Gerichtshof (EuGH) erklärt die Pkw-Maut für rechtswidrig.
               </li>
               <li>
-                <strong>2019:</strong> Die Bundesregierung stoppt die Planungen,
-                hohe Kosten für den Steuerzahler bleiben.
+                <strong>2019:</strong>  Scheuer kündigt die Verträge innerhalb von 24 Stunden.
+              </li>
+              <li>
+                <strong>März 2022:</strong> Schiedsgericht entscheidet, dass Schadenersatzansprüche der Betreiberfirmen dem Grunde nach bestehen.
               </li>
             </ul>
           </div>
@@ -485,14 +496,6 @@
             <span class="hashtag">#dobrindt</span>
             <span class="hashtag">#verkehrspolitik</span>
           </p>
-
-          <div class="comment-section">
-            <h4>Diskussion</h4>
-            <textarea
-              placeholder="Ihre Meinung zum Pkw-Maut Debakel..."
-            ></textarea>
-            <button class="submit-comment">Kommentar absenden</button>
-          </div>
         </div>
       </div>
     </section>
