--- a/fdp.html
+++ b/fdp.html
@@ -86,8 +86,9 @@
         betont mehr Freiheit und Selbstbestimmung für Bürger und Unternehmen und
         positioniert sich gegen exzessive staatliche Regulierung.
       </p>
-       <p>
-        Direktdemokratische Elemente wie Volksabstimmungen werden nicht explizit befürwortet oder gefordert.
+      <p>
+        Direktdemokratische Elemente wie Volksabstimmungen werden nicht explizit
+        befürwortet oder gefordert.
       </p>
       <p>
         <a
@@ -113,8 +114,8 @@
         <div class="highlight-skandal-scale">
           <h4>Skala der Wählertäuschung: 6/10</h4>
           <div class="gradient-bar-container">
-            <div class="gradient-bar-filled" style="width: 60%"></div>
-            <div class="gradient-bar-unfilled" style="width: 40%"></div>
+            <div class="gradient-bar-filled" style="width: 50%"></div>
+            <div class="gradient-bar-unfilled" style="width: 50%"></div>
           </div>
         </div>
 
@@ -203,20 +204,10 @@
           </p>
 
           <p class="party-highlight-hashtags">
-            <span class="hashtag">#wählertäuschung</span>
             <span class="hashtag">#wortbruch</span>
             <span class="hashtag">#verrat</span>
-            <span class="hashtag">#unglaubwürdigkeit</span>
-            <span class="hashtag">#fdp</span>
+            <a href="fdp.html">#fdp</a>
           </p>
-
-          <div class="comment-section">
-            <h4>Diskussion</h4>
-            <textarea
-              placeholder="Ihre Meinung zum Vorwurf der Wählertäuschung..."
-            ></textarea>
-            <button class="submit-comment">Kommentar absenden</button>
-          </div>
         </div>
       </div>
     </section>
@@ -224,15 +215,9 @@
     <section class="party-members">
       <h2 class="party-section-title">Bekannte Mitglieder</h2>
       <ul class="party-members-list">
-        <li class="party-member-item">
-          <a href="lindner.html">Christian Lindner</a>
-        </li>
-        <li class="party-member-item">
-          <a href="kubicki.html">Wolfgang Kubicki</a>
-        </li>
-        <li class="party-member-item">
-          <a href="westerwelle.html">Guido Westerwelle</a>
-        </li>
+        <li class="party-member-item">Christian Lindner</li>
+        <li class="party-member-item">Wolfgang Kubicki</li>
+        <li class="party-member-item">Guido Westerwelle</li>
       </ul>
     </section>
 
