--- a/gruene.html
+++ b/gruene.html
@@ -145,17 +145,8 @@
       <p class="party-highlight-hashtags">
         <span class="hashtag">#impfpflicht</span>
         <span class="hashtag">#corona</span>
-        <span class="hashtag">#gruene</span>
+        <a href="gruene.html">#gruene</a>
       </p>
-
-      <!-- Kommentare (Option, wenn implementiert) -->
-      <div class="comment-section">
-        <h4>Diskussion</h4>
-        <textarea
-          placeholder="Ihre Meinung zur Impfpflicht..."
-        ></textarea>
-        <button class="submit-comment">Kommentar absenden</button>
-      </div>
     </div>
     <!-- Ende der collapsible-content -->
   </div>
@@ -263,15 +254,6 @@
             <a href="gruene.html">#gruene</a>
             <span class="hashtag">#fischer</span>
           </p>
-
-          <!-- Kommentare (Option, wenn implementiert) -->
-          <div class="comment-section">
-            <h4>Diskussion</h4>
-            <textarea
-              placeholder="Ihre Meinung zum Kosovo-Luftangriff..."
-            ></textarea>
-            <button class="submit-comment">Kommentar absenden</button>
-          </div>
         </div>
         <!-- Ende der collapsible-content -->
       </div>
