--- a/bsw.html
+++ b/bsw.html
@@ -94,7 +94,7 @@
             <div class="collapsible-content">
                 <p class="party-highlight-description">
                     Die <b>Co-Parteivorsitzende des BSW, Amira Mohamed Ali</b>, sorgte
-                    im Januar 2024 mit einer <b>kontroversen Aussage zu
+                    im mit einer <b>kontroversen Aussage zu
                     Abschiebungen</b> für Aufsehen.  In einem Interview mit Tilo Jung
                     äußerte sie sich <b>sehr skeptisch gegenüber Abschiebungen</b> und
                     ließ erkennen, dass sie diese <b>grundsätzlich ablehnen</b> würde.
@@ -148,32 +148,21 @@
                     <span class="hashtag">#sicherheit</span>
                     <span class="hashtag">#migration</span>
                     <span class="hashtag">#rechtsstaatlichkeit</span>
-                    <span class="hashtag">#bsw</span>
+                    <a href="bsw.html">#bsw</a>
                     <span class="hashtag">#ali</span>
                 </p>
-
-                <div class="comment-section">
-                    <h4>Diskussion</h4>
-                    <textarea
-                        placeholder="Ihre Meinung zur Aussage von Amira Mohamed Ali..."
-                    ></textarea>
-                    <button class="submit-comment">Kommentar absenden</button>
-                </div>
             </div>
         </div>
     </section>
 
     <section class="party-members">
-      <h2 class="party-section-title">Bekannte Mitglieder</h2>
-      <ul class="party-members-list">
-         <li class="party-member-item">
-                <a href="wagenknecht.html">Sahra Wagenknecht</a>
-            </li>
-            <li class="party-member-item">
-                <a href="mohamed-ali.html">Amira Mohamed Ali</a>
-            </li>
-      </ul>
-    </section>
+  <h2 class="party-section-title">Bekannte Mitglieder</h2>
+  <ul class="party-members-list">
+    <li class="party-member-item">Sahra Wagenknecht</li>
+    <li class="party-member-item">Amira Mohamed Ali</li>
+  </ul>
+</section>
+
 
     <footer class="party-footer">
       <p>&copy; 2025 factico.</p>
