--- a/spd.html
+++ b/spd.html
@@ -86,7 +86,8 @@
       </p>
       <p>
         Das Dokument erwähnt keine direkten Volksabstimmungen oder Referenden
-        auf Bundesebene.</p>
+        auf Bundesebene.
+      </p>
       <p>
         <a
           href="https://www.spd.de/fileadmin/Dokumente/Beschluesse/Programm/2025_SPD_Regierungsprogramm.pdf"
@@ -198,18 +199,9 @@
           <p class="party-highlight-hashtags">
             <span class="hashtag">#impfpflicht</span>
             <span class="hashtag">#corona</span>
-            <span class="hashtag">#spd</span>
-            <span class="hashtag">#gruene</span>
+            <a href="spd.html">#spd</a>
+            <a href="gruene.html">#gruene</a>
           </p>
-
-          <!-- Ende der collapsible-content -->
-
-          <!-- Kommentare (Option, wenn implementiert) -->
-          <div class="comment-section">
-            <h4>Diskussion</h4>
-            <textarea placeholder="Ihre Meinung zur Impfpflicht..."></textarea>
-            <button class="submit-comment">Kommentar absenden</button>
-          </div>
         </div>
         <!-- Ende der collapsible-content -->
       </div>
@@ -223,11 +215,11 @@
 
         <!-- Skandal-Skala mit Farbverlauf -->
         <div class="highlight-skandal-scale">
-          <h4>Skandal-Skala: 9/10</h4>
+          <h4>Skandal-Skala: 8/10</h4>
           <div class="gradient-bar-container">
-            <div class="gradient-bar-filled" style="width: 90%"></div>
+            <div class="gradient-bar-filled" style="width: 80%"></div>
             <!-- Dynamische Breite -->
-            <div class="gradient-bar-unfilled" style="width: 10%"></div>
+            <div class="gradient-bar-unfilled" style="width: 20%"></div>
             <!-- Ungefüllter Bereich -->
           </div>
         </div>
@@ -269,23 +261,55 @@
           </p>
           <p class="party-highlight-source">
             <strong>Quelle:</strong>
-            <a href="https://de.wikipedia.org/wiki/CumEx-Files" target="_blank"
-              >Wikipedia: CumEx-Files</a
-            >
+            <a
+              href="https://www.finanzwende.de/themen/cumex/chronik-von-cumex"
+              target="_blank"
+              >CumEx-Counter: Was ist der aktuelle Stand der Ermittlungen?
+            </a>
           </p>
 
           <!-- Timeline -->
           <div class="party-highlight-timeline">
             <h4>Chronologie des Skandals:</h4>
             <ul>
-              <li><strong>2017:</strong> Aufdeckung des Cum-Ex-Skandals</li>
               <li>
-                <strong>2020:</strong> Olaf Scholz gerät unter Druck wegen
-                seiner Verbindungen
+                <strong>1990:</strong> Erster aktenkundiger CumEx-Fall. Dieser
+                wurde durch ein Urteil des Finanzgerichts Düsseldorf aus dem
+                Dezember 2016 bekannt.
+              </li>
+
+              <li>
+                <strong>2015:</strong> Die HypoVereinsbank akzeptiert als erste
+                Bank einen Bußgeldbescheid wegen ihrer Verwicklung in
+                CumEx-Geschäfte.
               </li>
               <li>
-                <strong>2023:</strong> Fortgesetzte Ermittlungen und politische
-                Konsequenzen
+                <strong>2016:</strong> Die Commerzbank macht sich weiterhin vor
+                Gericht dafür stark, dass sie Gelder aus CumEx-Geschäften vom
+                Staat erhält. Sie sorgt dabei dafür, dass die
+                Gerichtsverhandlungen hinter geschlossener Tür ablaufen.
+              </li>
+              <li>
+                <strong>2020:</strong> Olaf Scholz gerät unter Druck wegen
+                seiner Verbindungen. Ihm wird vorgeworfen, der Warburg-Bank
+                politischen Beistand geleistet zu haben.
+              </li>
+              <li>
+                <strong>2021:</strong> Recherchen machen endlich öffentlich,
+                dass die Bundesanstalt für Finanzdienstleistungsaufsicht (BaFin)
+                spätestens im Jahr 2007 von einem Hinweisgeber über
+                CumEx-Geschäfte informiert wurde
+              </li>
+              <li>
+                <strong>August 2022:</strong> In einem Schließfach des
+                ehemaligen SPD-Bundestagsabgeordneten Johannes Kahrs wurden
+                214.800 Euro in bar gefunden, der sich aktiv für die
+                Warburg-Miteigentümer einsetzte.
+              </li>
+              <li>
+                <strong>August 2022:</strong> Es steht der Verdacht im Raum,
+                dass E-Mails von Olaf Scholz aus seiner Zeit als Erster
+                Bürgermeister von Hamburg gezielt gelöscht wurden.
               </li>
             </ul>
           </div>
@@ -296,15 +320,6 @@
             <span class="hashtag">#steuern</span>
             <a href="scholz.html">#scholz</a>
           </p>
-
-          <!-- Kommentare (Option, wenn implementiert) -->
-          <div class="comment-section">
-            <h4>Diskussion</h4>
-            <textarea
-              placeholder="Ihre Meinung zum Cum-Ex-Skandal..."
-            ></textarea>
-            <button class="submit-comment">Kommentar absenden</button>
-          </div>
         </div>
         <!-- Ende der collapsible-content -->
       </div>
@@ -405,15 +420,6 @@
             <a href="scholz.html">#scholz</a>
             <span class="hashtag">#bafin</span>
           </p>
-
-          <!-- Kommentare (Option, wenn implementiert) -->
-          <div class="comment-section">
-            <h4>Diskussion</h4>
-            <textarea
-              placeholder="Ihre Meinung zum Wirecard-Skandal..."
-            ></textarea>
-            <button class="submit-comment">Kommentar absenden</button>
-          </div>
         </div>
         <!-- Ende der collapsible-content -->
       </div>
@@ -522,17 +528,6 @@
             <a href="gruene.html">#gruene</a>
             <span class="hashtag">#fischer</span>
           </p>
-
-          <!-- Ende der collapsible-content -->
-
-          <!-- Kommentare (Option, wenn implementiert) -->
-          <div class="comment-section">
-            <h4>Diskussion</h4>
-            <textarea
-              placeholder="Ihre Meinung zum Kosovo-Luftangriff..."
-            ></textarea>
-            <button class="submit-comment">Kommentar absenden</button>
-          </div>
         </div>
         <!-- Ende der collapsible-content -->
       </div>
@@ -549,9 +544,7 @@
         <li class="party-member-item">
           <a href="esken.html">Saskia Esken</a>
         </li>
-        <li class="party-member-item">
-          <a href="lauterbach.html">Karl Lauterbach</a>
-        </li>
+        <li class="party-member-item">Karl Lauterbach</li>
       </ul>
     </section>
 
