--- a/cducsu.html
+++ b/cducsu.html
@@ -244,11 +244,11 @@
                      </div>
 
           <p class="party-highlight-hashtags">
-            <span class="hashtag">#grenzöffnung</span>
+            <span class="hashtag">#grenzoeffnung</span>
             <span class="hashtag">#migration</span>
             <span class="hashtag">#terror</span>
             <span class="hashtag">#sicherheit</span>
-            <span class="hashtag">#cducsu</span>
+            <a href="cducsu.html">#cdu/csu</a>
             <span class="hashtag">#merkel</span>
           </p>
          
@@ -341,9 +341,9 @@
           </div>
 
           <p class="party-highlight-hashtags">
-            <span class="hashtag">#maskenaffäre</span>
+            <span class="hashtag">#maskenaffaere</span>
             <span class="hashtag">#korruption</span>
-            <span class="hashtag">#cducsu</span>
+            <a href="cducsu.html">#cducsu</a>
             <span class="hashtag">#corona</span>
           </p>
         </div>
@@ -423,8 +423,8 @@
           </div>
 
           <p class="party-highlight-hashtags">
-            <span class="hashtag">#cdu</span>
-            <span class="hashtag">#spendenaffäre</span>
+            <a href="cducsu.html">#cdu</a>
+            <span class="hashtag">#spendenaffaere</span>
             <span class="hashtag">#kohl</span>
           </p>
         </div>
@@ -491,9 +491,9 @@
           </div>
 
           <p class="party-highlight-hashtags">
-            <span class="hashtag">#pkmaut</span>
-            <span class="hashtag">#csu</span>
+            <a href="cducsu.html">#cducsu</a>
             <span class="hashtag">#dobrindt</span>
+            <span class="hashtag">#scheuer</span>
             <span class="hashtag">#verkehrspolitik</span>
           </p>
         </div>
@@ -503,20 +503,12 @@
     <section class="party-members">
       <h2 class="party-section-title">Bekannte Mitglieder</h2>
       <ul class="party-members-list">
-        <li class="party-member-item">
-          <a href="merkel.html">Angela Merkel</a>
-        </li>
-        <li class="party-member-item">
-          <a href="merz.html">Friedrich Merz</a>
-        </li>
-        <li class="party-member-item">
-          <a href="soeder.html">Markus Söder</a>
-        </li>
-        <li class="party-member-item">
-          <a href="laschet.html">Armin Laschet</a>
-        </li>
+        <li class="party-member-item">Angela Merkel</li>
+        <li class="party-member-item">Friedrich Merz</li>
+        <li class="party-member-item">Markus Söder</li>
+        <li class="party-member-item">Armin Laschet</li>
       </ul>
-    </section>
+    </section>    
 
     <footer class="party-footer">
       <p>&copy; 2025 factico.</p>
