--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
           <h4>Rechtliches</h4>
           <ul>
             <li><a href="impressum.html">Impressum</a></li>
-            <li><a href="/datenschutz">Datenschutz</a></li>
+            <li><a href="datenschutz.html">Datenschutz</a></li>
           </ul>
         </div>
         <div class="footer-section">
