--- a/impressum.html
+++ b/impressum.html
@@ -1,11 +1,19 @@
 <!DOCTYPE html>
 <html lang="de">
   <head>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap"
+      rel="stylesheet"
+    />
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Impressum - Factico</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+
+    <title>Impressum</title>
+    <!-- Favicon -->
+    <link rel="icon" type="image/png" href="https://i.imgur.com/6Fyu7WL.png" />
     <link rel="stylesheet" href="styles.css" />
-    <!-- Dein eigenes CSS -->
   </head>
   <body>
     <div class="impressum-container">
