--- a/datenschutz.html
+++ b/datenschutz.html
@@ -36,7 +36,7 @@
       <h2 class="datenschutz-section-title">3. Wer ist verantwortlich für die Datenverarbeitung?</h2>
       <p class="datenschutz-text">
         Verantwortlicher im Sinne der Datenschutzgesetze ist:
-        <br><strong>Factico</strong><br>
+        <br><strong>factico.</strong><br>
         Andreas Siade<br>
         Adolf-Baeyer-Damm 8<br>
         81735 München<br>
