--- a/cducsu.html
+++ b/cducsu.html
@@ -195,8 +195,11 @@
           </p>
 
           <div class="party-highlight-timeline">
-            <h4>Chronologie bekannter Anschläge durch Zuwanderer seit 2015:</h4>
-           <ul>
+            <h4>Beispiele bekannter Anschläge durch Zuwanderer seit 2015:</h4>
+            <p>
+              Die folgende Liste enthält nur einige ausgewählte Beispiele. Es gibt etliche weitere Vorfälle, die hier nicht aufgeführt sind.
+            </p>
+                       <ul>
            <li>
             <strong>Sommer 2015:</strong> Starker Anstieg der Flüchtlingszahlen, Zuspitzung der Lage an den Grenzen.
            </li>
@@ -234,11 +237,14 @@
            <li>
            <strong>9. Mai 2024: Messerattacke in Solingen:</strong> Ein 31-jähriger Mann aus Guinea attackiert in einer Kita mehrere Kinder mit einem Messer, verletzt vier Kinder schwer.
            </li>
-           <li>
-           <strong>24. Juni 2024: Messerattacke in Aschaffenburg:</strong> Ein 29-jähriger Afghane verletzt bei einer Messerattacke in der Innenstadt mehrere Menschen. 
-           </li>
-                         <li>
+             <li>
            <strong>20. Dezember 2024:</strong> <strong>Anschlag in Magdeburg:</strong> Taleb A. aus Saudi-Arabien rast durch den Weihnachtsmarkt und hinterlässt sechs Todesopfer sowie mehr als 300 Verletzte.
+           </li>
+           <li>
+           <strong>22. Januar 2025: Messerattacke in Aschaffenburg:</strong> Ein 28-jähriger Afghane greift eine Kindergruppe an, ein zweijähriger Junge und ein Mann,der helfen wollte, werden tödlich verletzt. 
+           </li>
+             <li>
+           <strong>13. Februar 2025:</strong> <strong>Anschlag in München:</strong>  Ein 24 Jahre alter Afghane, dessen Asylantrag abgelehnt wurde, rast in eine Gruppe von Demonstranten.
            </li>
            </ul>
                      </div>
