--- a/index.html
+++ b/index.html
@@ -132,17 +132,18 @@
               <div class="step-number" aria-hidden="true">1</div>
               <h3>Durchsuchen</h3>
               <p>
-                Finden Sie Politiker und Parteien, deren Aussagen und Handlungen
-                ausreichend Material für eine fundierte Auseinandersetzung
-                bieten.
+                Entdecken Sie Fakten, die gerne in Vergessenheit geraten und
+                hinterfragen Sie, was wirklich hinter den politischen Fassaden
+                steckt - und fragen Sie sich, warum sie so wenig Beachtung
+                finden.
               </p>
             </li>
             <li class="step">
               <div class="step-number" aria-hidden="true">2</div>
               <h3>Vergleichen</h3>
               <p>
-                Vergleichen Sie politische Ansichten und Handlungen, die oft
-                mehr zur Eskalation als zur Lösung von Problemen beitragen.
+                Setzen Sie politische Entscheidungen und Positionen ins Verhältnis – und
+                gewinnen Sie so ein klareres Bild.
               </p>
             </li>
             <li class="step">
