--- a/lang.html
+++ b/lang.html
@@ -86,8 +86,7 @@
     <h2 class="party-section-title">Talkshow-Highlights</h2>
 
     <p class="party-highlight-description">
-        Ricarda Lang ist nicht nur für ihre politischen Positionen bekannt, sondern auch für ihre eher fragwürdigen Auftritte in Talkshows. Ob als „Ernährungsexpertin“ oder mit ihren unüberlegten Aussagen zur Nordstream-Pipeline – Lang versteht es, immer wieder für Erheiterung und Irritationen zu sorgen. Besonders bemerkenswert war ihre Schätzung der Durchschnittsrente im Gespräch mit Markus Lanz, als sie diese auf stolze 2000 Euro ansetzte – eine Zahl, die weit über der tatsächlichen Rente von rund 1500 Euro liegt. Ihre Versuche, sich zu Themen zu äußern, bei denen sie offenbar nicht ganz auf dem neuesten Stand ist, führen nicht selten zu peinlichen Momenten. Besonders eindrucksvoll ist die Liste ihrer unüberlegten Aussagen, die in sozialen Medien reichlich geteilt werden. Ein kleines Beispiel folgt hier – für alle weiteren Fauxpas reicht ein Blick in die Online-Welt.
-    </p>
+      Als „Ernährungsexpertin“ und Fachfrau für Nordstream-Affären sorgt sie regelmäßig für heitere Momente und Irritationen. Besonders charmant: ihre Schätzung der Durchschnittsrente bei Markus Lanz – 2000 Euro! Ihre Auftritte zeugen von einer beachtlichen Fähigkeit, Themen zu durchdringen, ohne ganz auf dem Laufenden zu sein. Die Liste ihrer Missgeschicke ist beeindruckend – ein kurzer Blick in die sozialen Medien genügt.</p>
 
     <div class="video-container">
         <iframe
